--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
               desc: "QQ",
               content:
                 "<img src='images/demoQR.png' class='qr' /><h2>QQ:XXXXXX</h2>",
-              show: false,
+              show: true,
               jump: false,
             },
             {
