--- a/index.html
+++ b/index.html
@@ -207,15 +207,15 @@
               icon: "icon brands fa-qq",
               desc: "QQ",
               content:
-                "<img src='images/demoQR.png' class='qr' /><h2>QQ:XXXXXX</h2>",
-              show: true,
+                "<img src='images/QQQR.png' class='qr' /><h2>1507524536</h2>",
+              show: false,
               jump: false,
             },
             {
               name: "Github",
               icon: "icon brands fa-github",
               desc: "Github",
-              content: "https://github.com/Jiaocz/Personal-page",
+              content: "https://github.com/wsyzxjn",
               show: false,
               jump: true,
             },
