--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
               alt=""
               style="width: 122px; height: 122px"
           /></span>
-          <h1>Untitled</h1>
+          <h1>Amatsuka</h1>
           <transition-group name="fade">
             <div v-show="defaults" key="text">
-              <p>Lorem</p>
+              
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Inventore facere accusamus quae nesciunt at fuga dicta vitae
-                quidem reiciendis. Quos blanditiis corporis vel iusto
-                reprehenderit ratione distinctio fugiat quae sed.
+                欢迎你认识我，这是我的个人主页QwQ
+              </p>
+              <p>
+                24歳、学生です（x
               </p>
               <button
                 class="button small fit"
@@ -207,7 +207,7 @@
               icon: "icon brands fa-qq",
               desc: "QQ",
               content:
-                "<img src='images/QQQR.png' class='qr' /><h2>1507524536</h2>",
+                "<img src='images/QQQR.png' class='qr' /><h2>QQ：1507524536</h2>",
               show: false,
               jump: false,
             },
