--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Untitled</title>
+    <title>AmatsukaのWEB</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -75,7 +75,7 @@
                 @click="showAbout"
                 v-bind:disabled="onTransition==1"
               >
-                Click!
+                更多
               </button>
             </div>
             <div
