--- a/index.html
+++ b/index.html
@@ -216,29 +216,9 @@
           //Pages content
           page: [
             {
-              title: "Page 1",
-              texts: [
-                "Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore facere accusamus quae nesciunt at fuga dicta vitae quidem reiciendis. Quos blanditiis corporis vel iusto reprehenderit ratione distinctio fugiat quae sed.",
-              ],
-              html: "",
-              imgs: ["images/bg.jpg"],
-            },
-            {
-              title: "Page 2",
-              texts: ["Some text", "And some text"],
-              html: "<h2>HTML Support</h2>",
-              imgs: [""],
-            },
-            {
-              title: "Page 3",
-              texts: ["Multi images"],
-              imgs: ["images/bg.jpg", "images/demoQR.png"],
-              html: "",
-            },
-            {
-              title: "Page 4",
-              texts: ["Another Demo"],
-              html: '<a onclick="todonate()" style="color:#fff; background-color:#f0a1a8; border-radius: 0.3em; padding: 0.2em; cursor: pointer;"><<u>Donate!</u>></a><br /><p style="color:#ccc; font-size:0.7em;">Last updated: Apr. 14, 2021<p>',
+              title: "捐助页",
+              texts: ["或许想对我进行投喂..？"],
+              html: '<a onclick="todonate()" style="color:#fff; background-color:#f0a1a8; border-radius: 0.3em; padding: 0.2em; cursor: pointer;"><<u>点我投喂ww</u>></a><br /><p style="color:#ccc; font-size:0.7em;">Last updated: Feb. 14, 2023<p>',
               imgs: [""],
             },
             {
