--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AmatsukaのWEB</title>
+    <title>AmatsukaのWEBサイト</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
