--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <p>
                 欢迎你认识我，这是我的个人主页QwQ
               </p>
-              <p>
+              <p style="color:#ccc; font-size:0.7em;">
                 24歳、学生です（x
               </p>
               <button
