--- a/donate.html
+++ b/donate.html
@@ -16,9 +16,9 @@
 		<link rel="stylesheet" href="assets/css/loader.css" />
 		<div class="loader">
 			<div class="container">
-			<h1>🍊</h1>
-			<p>摇匀</p>
-			<p>再喝</p>
+			<h1>🍨</h1>
+			<p>稍作</p>
+			<p>等待</p>
 			</div>
 		</div>
 		
@@ -69,7 +69,7 @@
 
 						/*             Change Things Here            */
 						// Show on loaded
-						text:"<p>感谢您的支持，您可以在下方选择支持方式</p>",
+						text:"<p>感谢您的投喂ww，您可以在下方选择投喂方式，您的每一次投喂都将帮助我做的更好(*≧ω≦)</p>",
 						// Payments
 						method:[
 							{
