--- a/donate.html
+++ b/donate.html
@@ -76,21 +76,14 @@
 								name:"Alipay",
 								icon:"icon brands fa-alipay",
 								desc:"支付宝",
-								content:"<img src=\"images/demoQR.png\" class=\"qr\" /><br /><h2><a href=\"alipayqr://platformapi/startapp?saId=10000007&qrcode=null\"><u>支付宝[点击即可打开]</u></a></h2>",
+								content:"<img src=\"images/ALIQR.png\" class=\"qr\" /><br /><h2><a href=\"alipayqr://platformapi/startapp?saId=10000007&qrcode=https://qr.alipay.com/fkx11941ebqnf3ndxcmfe64\"><u>支付宝[点击即可打开]</u></a></h2>",
 								show: false
 							},
 							{
 								name:"Wechat",
 								icon:"icon brands fa-weixin",
 								desc:"微信支付",
-								content:"<img src=\"images/demoQR.png\" class=\"qr\" /><br /><h2>微信</h2>",
-								show:false
-							},
-							{
-								name:"QQ",
-								icon:"icon brands fa-qq",
-								desc:"QQ钱包",
-								content:"<img src=\"images/demoQR.png\" class=\"qr\" /><br /><h2>QQ钱包</h2>",
+								content:"<img src=\"images/WXQR.png\" class=\"qr\" /><br /><h2>微信</h2>",
 								show:false
 							}
 						],
