--- a/donate.html
+++ b/donate.html
@@ -31,7 +31,7 @@
 						<span style="display: flex; position: fixed; top: 2em; left: 2em; opacity: 0.65;" v-if="backButton"><button class="button small" onclick="toIndex()">&lt;返回</button></span>
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" style="width: 122px; height: 122px;" /></span>
-							<h1>Untitled</h1>
+							<h1>Amatsuka</h1>
 							<transition-group name="fade">
 								<div v-html="text" v-show="defaults" key="text"></div>
 								<div v-for="item in method" v-show="item.show" key="item.name" v-html="item.content"></div>
