--- a/donate.html
+++ b/donate.html
@@ -83,7 +83,7 @@
 								name:"Wechat",
 								icon:"icon brands fa-weixin",
 								desc:"微信支付",
-								content:"<img src=\"images/WXQR.png\" class=\"qr\" /><br /><h2><a href=\"wxp://f2f0oeDF_dve0K_QxeVoxAW3F7V5tttaORTQeMMKSYW8EYMHjzubEB1SM0BrMt19Cudz\"><u>微信客户端内直接点我w</u></h2>",
+								content:"<img src=\"images/WXQR.png\" class=\"qr\" /><br /><h2>微信</h2>",
 								show:false
 							}
 						],
