--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,3 @@
 <ul class="copyright" style="opacity: 0.5;">
-    <li><a href="#">&copy; Untitled</a></li><li><small>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></small></li><li>Background: <a href="http://unsplash.com" target="_blank">Unsplash</a></li>
-</ul>
-<ul class="copyright" style="opacity: 0.5;">
-    <li>Untitled</li><li><a href="https://beian.miit.gov.cn/" target="_blank">备案号</a></li>
+    <li><a href="#">&copy; Amatsuka</a></li><li><small>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></small></li><li>Background: <a href="https://amashiro.com/" target="_blank">甘城なつき</a></li>
 </ul>
